# signalguard-rs

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
docs/: api-examples.md  architecture.md  failure-modes.md  operations.md  replay-format.md  self-review.md  web-console.md
examples/replay/: README.md  btcusdt_anomalies.jsonl  depth_gap_sample.jsonl  depth_sample.jsonl  sample.jsonl
migrations/: 20260601120001_create_trades.sql  20260601120002_create_quotes.sql  20260601120003_create_anomalies.sql
scripts/: demo-replay.sh  smoke.sh
src/: config.rs  depth_json.rs  lib.rs  main.rs  runtime.rs  runtime_supervisor.rs  startup.rs
src/api/: demo_data.rs  dto.rs  error.rs  handlers.rs  mod.rs  routes.rs  state.rs
src/config/: tests.rs
src/detectors/: depth_sequence_gap.rs  engine.rs  event_lag_spike.rs  mod.rs  price_move.rs  quote_stuck.rs  spread_spike.rs  stale_data.rs  test_support.rs  trade_burst.rs
src/domain/: anomaly.rs  depth.rs  events.rs  health.rs  market_state.rs  mod.rs  symbol.rs
src/exchange/: binance.rs
src/health/: mod.rs  scoring.rs
src/ingestion/: error.rs  event.rs  live.rs  mod.rs  pipeline.rs  replay.rs
src/state/: aggregator.rs  mod.rs  order_book.rs  window.rs
src/storage/: mod.rs  (+6 more)
tests/: postgres_storage.rs  redis_cache.rs  replay_e2e.rs  runtime_control.rs
web/: .env.example  .eslintrc.cjs  .gitignore  bundle-size-budget.json  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
(+59 files in other folders)
